[tool.poetry]
name = "wiki_example"
version = "0.1.0"
description = ""
authors = ["Charles Marshall <charlesmarshallj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Wikipedia-API = "^0.5.8"
boto3 = "^1.26.110"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
